--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,6 @@
   }
 
   body {
-    @apply bg-background text-foreground overflow-x-hidden;
+    @apply overflow-x-hidden bg-background text-foreground;
   }
 }
